global err status code
